2 July 2012: Wouter
	- fix checkconf unit test and add test for backwards compatibility
	  for difffile: "x" statement.

29 June 2012: Wouter
	- Implemented /tmp/nsd.xfr.xxx/ to replace ixfr.db.  So that nsdc
	  patch is no longer needed.

8 June 2012: Wouter
	- Fix tpkg test cutest_qroot and rr-test for prinout of algorithms
	  as numbers, and copy of DO flag to the answer.
	- pick up fd fix from 3_2 branch: Some more fd >= 0 to fd != -1 fixes

31 May 2012: Matthijs
	- Sync with 3.2 branch

24 February 2012: Wouter
	- Fix for qtype ANY for a wildcard domain in NSEC signed zone.

9 February 2012: Wouter
	- Update acxnlnetlabs.m4 version 21, fixed MEMCMP_BROKEN #undef line.

23 January 2012: Wouter
	- remove clang security warning about %n in format string.

20 January 2012: Wouter
	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
	- Fix configure for OpenIndiana sunos 5.11, acx_nlnetlabs.m4 update.

12 January 2012: Matthijs
        - Fix bug #421: truncate pidfile on shutdown, before unlink.

10 January 2012: Wouter
	- removed unused variables.

10 November 2011: Wouter
	- acxnlnetlabs.m4 updated to version 16, better lto check (a.out drop).

3 November 2011: Wouter
	- fflush zonelistfile after zone add or delete.

1 November 2011: Wouter
	- Fix -flto detection for llvm compiler on Lion.

10 October 2011: Matthijs
	- Don't clear the AA bit if there is an authoritative CNAME in the
	  answer section (as shown in RFC 1034, Section 6.2.7, 2nd example).

10 October 2011: Wouter
	- squelch EPIPE when writing AXFR, enable with verbosity 2.

26 September 2011: (Matthijs, from NSD3_2 branch)
	- Copy the DO bit to the response.
	- Don't return SERVFAIL on a domain that looks like a NSEC3
	  domain but is actually a empty non-terminal.

19 August 2011: Wouter
	- Fix segfault if no logfile is used.

5 August 2011: Wouter
	- Fix make from repeating action already taken.
	- Fix compile without openssl.

3 August 2011: Wouter