@@ -295,6 +295,7 @@ config_print_zone(nsd_options_t* opt, const char* k, int s, const char *o,
 		SERV_GET_STR(username, o);
 		SERV_GET_STR(zonesdir, o);
 		SERV_GET_STR(xfrdfile, o);
+		SERV_GET_STR(xfrdir, o);
 		SERV_GET_STR(zonelistfile, o);
 		SERV_GET_STR(port, o);
 		/* int */
@@ -382,6 +383,7 @@ config_test_print_server(nsd_options_t* opt)
 	print_string_var("zonesdir:", opt->zonesdir);
 	print_string_var("xfrdfile:", opt->xfrdfile);
 	print_string_var("zonelistfile:", opt->zonelistfile);
+	print_string_var("xfrdir:", opt->xfrdir);
 	printf("\txfrd_reload_timeout: %d\n", opt->xfrd_reload_timeout);
 	printf("\tverbosity: %d\n", opt->verbosity);
 	for(ip = opt->ip_addresses; ip; ip=ip->next)
@@ -500,6 +502,11 @@ additional_checks(nsd_options_t* opt, const char* filename)
        		if (strncmp(opt->chroot, opt->zonelistfile, l) != 0) {
 			fprintf(stderr, "%s: zonelistfile %s is not relative to chroot %s.\n",
 				filename, opt->zonelistfile, opt->chroot);
+			errors ++;
+                }
+       		if (strncmp(opt->chroot, opt->xfrdir, l) != 0) {
+			fprintf(stderr, "%s: xfrdir %s is not relative to chroot %s.\n",
+				filename, opt->xfrdir, opt->chroot);
 			errors ++;
                 }
  }
